# patallm-gallery

./: .gitmodules  0-AI-MANIFEST.a2ml  CHANGELOG.md  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  MAINTAINERS.adoc  META.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
did-you-actually-do-that/: .containerignore  .gitignore  ABI-FFI-README.md  AI.a2ml  AI.djot  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Justfile  Mustfile  README.adoc  README.md  ROADMAP.adoc  SECURITY.md  eclexiaiser.toml  example-claim.json  selur-compose.toml
did-you-actually-do-that/.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
did-you-actually-do-that/.github/workflows/: cflite_batch.yml  cflite_pr.yml  codeql.yml  rust-ci.yml  scorecard.yml  security.yml
did-you-actually-do-that/.machine_readable/: ECOSYSTEM.scm  META.scm  STATE.scm
did-you-actually-do-that/.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
did-you-actually-do-that/benches/: verification.rs
did-you-actually-do-that/contractiles/anti/: README.adoc
did-you-actually-do-that/contractiles/k9/: panic-attack-attested.k9.ncl  panic-attack-report.k9.ncl  panic-attack-verified.k9.ncl
did-you-actually-do-that/contractiles/trust/: PanicAttackTrustfile.hs  blueprint.a2ml
did-you-actually-do-that/docs/: AOP-CONTRACTILE-MAPPING.adoc  CLADISTIC-TAXONOMY.adoc  LISP-META-LAYER.adoc  LLM-PROCRASTINATION-PATTERNS.adoc  VERISIMDB-CODE-IDENTITY.adoc
did-you-actually-do-that/docs/design/: DESIGN-2026-03-01-verification-philosophy.adoc  PLAN-OF-ACTION-2026-03-01.adoc
did-you-actually-do-that/dyadt_brain/: .gitignore  README.md  mix.exs
did-you-actually-do-that/dyadt_brain/config/: config.exs  dev.exs  prod.exs  test.exs
did-you-actually-do-that/dyadt_brain/lib/: dyadt_brain.ex
did-you-actually-do-that/dyadt_brain/lib/dyadt_brain/: application.ex  attestation.ex  claim_registry.ex  pattern_learner.ex  regression_baseline.ex  surveillance_supervisor.ex  test_runner.ex  verdict_engine.ex  verification_manager.ex  verifications.ex
did-you-actually-do-that/dyadt_brain/test/: claim_registry_test.exs  dyadt_brain_test.exs  grpc_test.exs  pattern_learner_test.exs  regression_baseline_test.exs  rust_port_test.exs  schema_test.exs  surveillance_supervisor_test.exs  test_runner_test.exs  verdict_engine_test.exs  verifications_test.exs
did-you-actually-do-that/ffi/zig/: build.zig
did-you-actually-do-that/fleet/: dyadtbot.ex  reporter.ex
did-you-actually-do-that/fuzz/: Cargo.toml
did-you-actually-do-that/fuzz/fuzz_targets/: fuzz_claim_extractor.rs  fuzz_claim_parsing.rs  fuzz_evidence_spec.rs  fuzz_hook_input.rs
did-you-actually-do-that/src/: async_checks.rs  claim_extractor.rs  hooks.rs  lib.rs  main.rs  mcp_server.rs  port_protocol.rs  watch.rs
did-you-actually-do-that/src/abi/: Attestation.idr  Foreign.idr  Layout.idr  Types.idr
did-you-actually-do-that/src/slm/: ensemble.rs  graph_of_thought.rs  mixture_of_experts.rs  mod.rs  policy_oracle.rs
did-you-actually-do-that/src/verifiers/: attestation.rs  completeness.rs  content_hash.rs  cross_reference.rs  dependency.rs  diff_coherence.rs  file_existence.rs  mod.rs  semantic.rs  syntactic.rs
did-you-actually-do-that/tests/: integration_tests.rs  proptest_tests.rs
elegant-state/.archive/: ARCHITECTURE.adoc  ARCHITECTURE.md  CONTRIBUTING.adoc  Cargo.toml  Justfile  README.adoc  guix.scm  rustfmt.toml
elegant-state/.archive/config/: main.ncl  presets.ncl  types.ncl  validators.ncl
elegant-state/.archive/doc/: chat-er-diagram.adoc
elegant-state/.archive/src/: lib.rs  main.rs
elegant-state/.archive/tests/: integration_test.rs
esn/: Cargo.toml  MODEL_CARD.adoc  README.adoc  ROADMAP.adoc
esn/.github/workflows/: rust-ci.yml
esn/.machine_readable/: AGENTIC.scm  PLAYBOOK.scm
esn/.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  STATE.a2ml
esn/examples/: benchmark.rs
esn/fuzz/: Cargo.toml
esn/src/: lib.rs
llm-tools/unify/: .editorconfig  .gitlab-ci.yml  0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Containerfile  Justfile  MAINTAINERS.md  README.adoc  ROADMAP.adoc  RSR-COMPLIANCE.md  SECURITY.md  justfile  mustfile.ncl
llm-tools/unify-core/: 0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.adoc  README.md  ROADMAP.adoc
llm-tools/unify-core/.clusterfuzzlite/: Containerfile  project.yaml
llm-tools/unify-core/.machine_readable/: AGENTIC.scm  META.scm
llm-tools/unify-core/fuzz/: Cargo.toml
llm-tools/unify-core/src/: error.rs  lib.rs  models.rs
llm-tools/unify-core/tests/: conformance.rs  models.rs
llm-tools/unify/.clusterfuzzlite/: Containerfile  build.sh  project.yaml
llm-tools/unify/.config/: well-known.scm
llm-tools/unify/.github/: dependabot.yml
llm-tools/unify/.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  STATE.scm
llm-tools/unify/.well-known/: ai.txt  humans.txt  security.txt
llm-tools/unify/docs/: CITATIONS.adoc
llm-tools/unify/fuzz/: Cargo.toml
llm-tools/unify/tests/: e2e_test.sh
llm-tools/verify/: .editorconfig  0-AI-MANIFEST.a2ml  ARCHITECTURE.md  CONTRIBUTING.md  Justfile  README.adoc  SECURITY.md  TESTING-REPORT.adoc  TESTING-REPORT.scm  claude-verify.cabal  justfile
llm-tools/verify/.machine_readable/: AGENTIC.scm  NEUROSYM.scm
llm-tools/verify/app/: Main.hs
llm-tools/verify/config/: default-context.toml
llm-tools/verify/docs/: CITATIONS.adoc  feedback-loop-spec.md
llm-tools/verify/src/: ClaudeVerify.hs
llm-tools/verify/test/: Spec.hs
lsm/: 0-AI-MANIFEST.a2ml  CONTRIBUTING.md  Cargo.toml  README.adoc  README.md
lsm/.github/workflows/: comprehensive-quality.yml  rust-ci.yml
lsm/.machine_readable/: ECOSYSTEM.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
lsm/.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
lsm/fuzz/: Cargo.toml
lsm/src/: lib.rs
(+466 files in other folders)
