[package]
name = "elegant-state"
version = "0.1.0"
edition = "2021"
description = "Local-first state graph for multi-agent orchestration"
license = "MIT"
repository = "https://github.com/Hyperpolymath/elegant-STATE"

[lib]
name = "elegant_state"
path = "src/lib.rs"

[[bin]]
name = "state-cli"
path = "src/main.rs"

[dependencies]
# Database
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# IDs
ulid = { version = "1.1", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"

# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
