cabal-version:       3.0
name:                claude-verify
version:             0.1.0.0
synopsis:            Real verification for LLM-generated code via ECHIDNA integration
description:
    Claude-verify provides actual formal verification for code that Claude
    or other LLMs generate, rather than relying on pattern matching.

    It integrates with the ECHIDNA neurosymbolic theorem proving platform
    to access 12+ theorem provers including Z3, CVC5, Lean, Coq, and Agda.

    Features:

    * Language-agnostic verification condition extraction
    * Multi-prover portfolio verification via ECHIDNA
    * Feedback loop for learning from verification failures
    * Integration with git hooks, CI/CD, and Claude Code

license:             MIT
license-file:        LICENSE
author:              Hyperpolymath
maintainer:
copyright:           2025
category:            Verification, Formal Methods
build-type:          Simple
extra-doc-files:     ARCHITECTURE.md
                     docs/*.md

tested-with:         GHC == 9.4.8
                     GHC == 9.6.4
                     GHC == 9.8.2

source-repository head
    type:     git
    location: https://github.com/Hyperpolymath/llm-verify

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
                 -Werror=incomplete-patterns

common extensions
    default-extensions: OverloadedStrings
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       TypeApplications
                       ScopedTypeVariables
                       BlockArguments
                       RecordWildCards
                       NamedFieldPuns

library
    import:           warnings, extensions
    exposed-modules:  ClaudeVerify
                      ClaudeVerify.EchidnaClient
                      ClaudeVerify.PropertyExtraction
                      ClaudeVerify.Feedback
                      ClaudeVerify.Config
                      ClaudeVerify.Report
                      ClaudeVerify.Languages.Rust
                      ClaudeVerify.Languages.Haskell
                      ClaudeVerify.Languages.Ada
    other-modules:    ClaudeVerify.Internal.AST
                      ClaudeVerify.Internal.SMTLIB
                      ClaudeVerify.Internal.Types
    build-depends:    base >= 4.17 && < 5
                    , aeson >= 2.1
                    , bytestring >= 0.11
                    , containers >= 0.6
                    , directory >= 1.3
                    , filepath >= 1.4
                    , megaparsec >= 9.3
                    , mtl >= 2.3
                    , optparse-applicative >= 0.17
                    , parser-combinators >= 1.3
                    , process >= 1.6
                    , sbv >= 10.0
                    , sqlite-simple >= 0.4
                    , text >= 2.0
                    , time >= 1.12
                    , toml-parser >= 1.3
                    , transformers >= 0.6
                    , uuid >= 1.3
                    , vector >= 0.13
                    , what4 >= 1.4
    hs-source-dirs:   src
    default-language: GHC2021

executable claude-verify
    import:           warnings, extensions
    main-is:          Main.hs
    other-modules:
    build-depends:    base >= 4.17 && < 5
                    , claude-verify
                    , optparse-applicative >= 0.17
                    , text >= 2.0
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite claude-verify-test
    import:           warnings, extensions
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    Test.PropertyExtraction
                      Test.EchidnaClient
                      Test.Feedback
    build-depends:    base >= 4.17 && < 5
                    , claude-verify
                    , hspec >= 2.10
                    , hspec-megaparsec >= 2.2
                    , QuickCheck >= 2.14
                    , text >= 2.0
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
